Logo cropped issue fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -76,9 +76,9 @@ body {
 }
 
 .slider img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: auto;
+  height: 48px;
+  object-fit: contain;
   opacity: 0.6;
 }
 
